# GRIN

./: Cargo.toml  LICENSE  README.md
.github/workflows/: ci.yml  release.yml
scripts/: install.ps1  install.sh
src/: git.rs  lib.rs  main.rs  parser.rs
src/analyzer/: churn.rs  contributors.rs  mod.rs  timeline.rs
src/render/: churn.rs  common.rs  glyphs.rs  mod.rs  style.rs  timeline.rs  who.rs
